--- a/index.html
+++ b/index.html
@@ -28,170 +28,6 @@
       height: 150px;
     }
   </style>
-
-  <script typeof="text/javascript">
-    var imageCount = 0;
-    var idsImagesCompressed = [];
-    var idsImagesUncompressed = [];
-    var selectedImageIndex = -1;
-    var arachnePath = 'https://arachne.dainst.org';
-    // var flaskPath = 'data/'; // Deployment
-    var flaskPath = 'http://localhost:5000/'; // Development
-    var hashRegex = /#(\d+)/;
-
-    function setMainImage(imageName, imageUrl, element) {
-      var imageElement = element.querySelector('img');
-      var linkElement = element.querySelector('a');
-
-      if (imageUrl === null) {
-        imageUrl = 'icons/key-solid.svg';
-      }
-
-      imageElement.src = imageUrl;
-      linkElement.innerHTML = "<i class=\"fas fa-external-link-alt\"></i> " + imageName;
-      linkElement.href = arachnePath + '/search?q=' + imageName;
-    }
-
-    function setNeighbourImage(imageId, imageName, imageUrl, element) {
-      var imageElement = element.querySelector('img');
-
-      if (imageUrl === null) {
-        imageUrl = 'icons/key-solid.svg';
-      }
-
-      imageElement.src = imageUrl;
-      element.onclick = function () {
-        updateHash(imageId);
-      };
-    }
-
-    function getCurrentImageNameAndNeighbours() {
-
-      setPlaceHolders();
-
-      var xobj = new XMLHttpRequest();
-      xobj.overrideMimeType('application/json');
-      xobj.open('GET', flaskPath + 'image_name_and_neighbours/' + idsImagesCompressed[selectedImageIndex], true);
-      xobj.onreadystatechange = function () {
-        if (xobj.readyState === 4 && xobj.status === 200) {
-          var imageData = JSON.parse(xobj.responseText);
-          var mainImageElement = document.querySelector('#main-card');
-
-          if (imageData.length === 0) {
-            // TODO: High ID images get empty results from service
-            console.log('No data for image #' + idsImagesCompressed[selectedImageIndex] + "!");
-            return;
-          }
-
-          setMainImage(imageData[0], imageData[1], mainImageElement);
-
-          for (var i = 0; i < 9; i++) {
-            setNeighbourImage(
-                    idsImagesCompressed.indexOf(imageData[2][i].id),
-                    imageData[2][i].name,
-                    imageData[2][i].url,
-                    document.querySelector('#neighbour-' + String(i + 1)));
-
-            setNeighbourImage(
-                    idsImagesUncompressed.indexOf(imageData[3][i].id),
-                    imageData[3][i].name,
-                    imageData[3][i].url,
-                    document.querySelector('#neighbour-uncompressed-' + String(i + 1)));
-          }
-        }
-      };
-      xobj.send(null);
-    }
-
-    function readHash() {
-      if (window.location.hash) {
-        selectedImageIndex = hashRegex.exec(window.location.hash)[1];
-        if (selectedImageIndex > imageCount) {
-          selectedImageIndex = imageCount;
-        } else if (selectedImageIndex < 0) {
-          updateHash(0);
-        }
-      } else {
-        console.log('No hash, setting to first image...');
-        updateHash(0);
-      }
-    }
-
-    function updateHash(id) {
-      window.location.hash = '#' + id;
-    }
-
-    function setPlaceHolders() {
-      var image_elements = document.querySelectorAll('img');
-
-      for (var i = 0; i < image_elements.length; i++) {
-        image_elements[i].src = 'https://arachne.dainst.org/img/placeholder/placeholderNoImage.png';
-      }
-    }
-
-    window.onhashchange = function () {
-      var value = hashRegex.exec(window.location.hash)[1];
-
-      if (value > imageCount) {
-        selectedImageIndex = imageCount;
-      } else if (value < 0) {
-        selectedImageIndex = 0;
-      } else {
-        selectedImageIndex = value;
-      }
-      getCurrentImageNameAndNeighbours();
-    };
-
-    function init() {
-
-      var xobj = new XMLHttpRequest();
-      xobj.overrideMimeType('application/json');
-      xobj.open('GET', flaskPath + 'images_with_neighbours', true);
-      xobj.onreadystatechange = function () {
-        if (xobj.readyState === 4 && xobj.status === 200) {
-          var response = JSON.parse(xobj.responseText);
-
-          idsImagesCompressed = response['compressed'];
-          idsImagesUncompressed = response['uncompressed'];
-
-          if(idsImagesCompressed.length !== idsImagesUncompressed.length){
-            console.log("Warning the number of neighbours based on compressed and uncompressed differs features:");
-            console.log(idsImagesCompressed.length, idsImagesUncompressed.length)
-          }
-
-          imageCount = idsImagesCompressed.length;
-
-          readHash();
-          getCurrentImageNameAndNeighbours()
-        }
-      };
-      xobj.send(null);
-    }
-
-    function decreaseImageIndex() {
-      var newValue = parseInt(selectedImageIndex) - 1;
-      if (newValue < 0) {
-        newValue = 0;
-      }
-      updateHash(newValue);
-    }
-
-    function setRandomImage() {
-      var newValue = Math.floor(Math.random() * imageCount);
-      updateHash(newValue);
-    }
-
-    function increaseImageIndex() {
-      var newValue = parseInt(selectedImageIndex) + 1;
-      if (newValue > imageCount) {
-        newValue = imageCount
-      }
-      updateHash(newValue);
-    }
-
-    init()
-  </script>
-
 </head>
 
 <body>
@@ -220,11 +56,10 @@
 
   <br/>
   <div class="row">
-    <div class="col-md-6">
-      <h3>Compressed</h3>
-      <footer class="blockquote-footer">32 feature values per image</footer>
-
-      <span id="neighbour-1"><img class="neighbour" src=""></span>
+   <div class="col-md-12">
+      <h3>Nearest neighbours</h3>
+      <footer class="blockquote-footer">KNN based on 2048 feature values per image</footer>
+      <span id="neighbour-1"><img class="neighbour" src=""/></span>
       <span id="neighbour-2"><img class="neighbour" src=""></span>
       <span id="neighbour-3"><img class="neighbour" src=""></span>
       <span id="neighbour-4"><img class="neighbour" src=""></span>
@@ -233,22 +68,127 @@
       <span id="neighbour-7"><img class="neighbour" src=""></span>
       <span id="neighbour-8"><img class="neighbour" src=""></span>
       <span id="neighbour-9"><img class="neighbour" src=""></span>
-    </div>
-    <div class="col-md-6">
-      <h3>Uncompressed</h3>
-      <footer class="blockquote-footer">2048 feature values per image</footer>
-      <span id="neighbour-uncompressed-1"><img class="neighbour" src=""/></span>
-      <span id="neighbour-uncompressed-2"><img class="neighbour" src=""></span>
-      <span id="neighbour-uncompressed-3"><img class="neighbour" src=""></span>
-      <span id="neighbour-uncompressed-4"><img class="neighbour" src=""></span>
-      <span id="neighbour-uncompressed-5"><img class="neighbour" src=""></span>
-      <span id="neighbour-uncompressed-6"><img class="neighbour" src=""></span>
-      <span id="neighbour-uncompressed-7"><img class="neighbour" src=""></span>
-      <span id="neighbour-uncompressed-8"><img class="neighbour" src=""></span>
-      <span id="neighbour-uncompressed-9"><img class="neighbour" src=""></span>
-    </div>
+   </div>
   </div>
 </div>
 </body>
+
+<script typeof="text/javascript">
+    var images = [];
+    var selectedImageIndex = -1;
+    // var basepath = 'data/'; // Deployment
+    var basepath = 'http://localhost:5000/'; // Development
+    var hashRegex = /#(\d+)/;
+
+    var mainImageElement = document.querySelector('#main-card');
+
+    function flaskPath() {
+        params = new URLSearchParams(window.location.search)
+        return basepath + params.get("project");
+    }
+
+    function setImage(imageName, element) {
+        var imageElement = element.querySelector('img');
+
+        imageElement.src = flaskPath() + "/" + imageName;
+
+        element.onclick = function () {
+            updateHash(images.indexOf(imageName));
+        };
+    }
+
+    function getCurrentImageNameAndNeighbours() {
+        if(selectedImageIndex < 0)
+            return
+
+        var xobj = new XMLHttpRequest();
+        xobj.overrideMimeType('application/json');
+        xobj.open('GET', flaskPath() + '/neighbours/' + images[selectedImageIndex]);
+        xobj.onreadystatechange = function () {
+            if (xobj.readyState === 4 && xobj.status === 200) {
+                var neighbours = JSON.parse(xobj.responseText);
+
+                setImage(images[selectedImageIndex], mainImageElement);
+
+                for (var i = 0; i < 9; i++) {
+                    setImage(
+                        neighbours[i][0],
+                        document.querySelector('#neighbour-' + String(i + 1))
+                    );
+                }
+            }
+        };
+        xobj.send(null);
+    }
+
+    function readHash() {
+        if (window.location.hash) {
+            selectedImageIndex = hashRegex.exec(window.location.hash)[1];
+            if (selectedImageIndex > images.length) {
+                selectedImageIndex = images.length;
+            } else if (selectedImageIndex < 0) {
+                updateHash(0);
+            }
+        } else {
+            console.log('No hash, setting to first image...');
+            updateHash(0);
+        }
+    }
+
+    function updateHash(id) {
+        window.location.hash = '#' + id;
+    }
+
+    window.onhashchange = function () {
+        var value = hashRegex.exec(window.location.hash)[1];
+
+        if (value > images.length) {
+            selectedImageIndex = images.length;
+        } else if (value < 0) {
+            selectedImageIndex = 0;
+        } else {
+            selectedImageIndex = value;
+        }
+        getCurrentImageNameAndNeighbours();
+    };
+
+    function init() {
+
+        var xobj = new XMLHttpRequest();
+        xobj.overrideMimeType('application/json');
+        xobj.open('GET', flaskPath(), true);
+        xobj.onreadystatechange = function () {
+            if (xobj.readyState === 4 && xobj.status === 200) {
+                images = JSON.parse(xobj.responseText);
+                readHash();
+                getCurrentImageNameAndNeighbours();
+            }
+        };
+        xobj.send(null);
+    }
+
+    function decreaseImageIndex() {
+        var newValue = parseInt(selectedImageIndex) - 1;
+        if (newValue < 0) {
+            newValue = 0;
+        }
+        updateHash(newValue);
+    }
+
+    function setRandomImage() {
+        var newValue = Math.floor(Math.random() * images.length);
+        updateHash(newValue);
+    }
+
+    function increaseImageIndex() {
+        var newValue = parseInt(selectedImageIndex) + 1;
+        if (newValue > images.length) {
+            newValue = images.length
+        }
+        updateHash(newValue);
+    }
+
+    init()
+</script>
 
 </html>
