Restrict drawing board width

--- a/demo_draw.html
+++ b/demo_draw.html
@@ -22,7 +22,7 @@
   <style type="text/css">
     div#drawing-board {
       height: 500px;
-      width: auto;
+      width: 700px;
     }
 
     img.neighbour {
