Added blueprint - Routes at localhost:5001/api/...

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     var images = [];
     var selectedImageIndex = -1;
     // var basepath = 'data/'; // Deployment
-    var basepath = 'http://localhost:5001/'; // Development
+    var basepath = 'http://localhost:5001/api/'; // Development
     var hashRegex = /#(\d+)/;
 
     var mainImageElement = document.querySelector('#main-card');
