--- a/simple_demos/demo.html
+++ b/simple_demos/demo.html
@@ -76,8 +76,8 @@
 <script typeof="text/javascript">
     var images = [];
     var selectedImageIndex = -1;
-    // var basepath = 'data/'; // Deployment
-    var basepath = 'http://localhost:5001/'; // Development
+    var basepath = 'data/'; // Deployment
+    //var basepath = 'http://localhost:5000/'; // Development
     var hashRegex = /#(\d+)/;
 
     var mainImageElement = document.querySelector('#main-card');
